# ted

./: .gitignore  Dockerfile  README.md  aliases.sh  docker-compose.yml  install.sh  pyproject.toml  ted.py  ted.spec  ted_aliases.sh  uninstall.sh
res/.obsidian/: graph.json  hotkeys.json  templates.json
ted/: app.py  cli.py  config.py  data_types.py  inbox.json  types.py  utils.py  vault.py
ted-bash/: to-zit.sh
ted/templates/: index.html
