[project]
name = "ted"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.4",
    "pyinstaller>=6.16.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
ted-dev = "ted.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ted"]
